@@ -1,3 +1,7 @@
+2005-01-19 Alain Magloire
+	PR 83151
+	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
+
 2005-01-18 David Inglis
 	Fixed bug #82705
 	
